<resources>
    <string name="ykfsdk_app_name">IMKFSDK</string>
    <string name="ykfsdk_hello_world">Hello world!</string>
    <string name="ykfsdk_action_settings">Settings</string>
    <string name="ykfsdk_recorder_normal">按住 说话</string>
    <string name="ykfsdk_recorder_recording">松开 手指</string>
    <string name="ykfsdk_recorder_want_cancel">松开手指 取消发送</string>
    <string name="ykfsdk_investigate">请您对本次服务做出评价, 点击对应选项即可完成评价</string>
    <string name="ykfsdk_logout">注销</string>
    <string name="ykfsdk_topeople">转人工</string>
    <string name="ykfsdk_send">发送</string>
    <string name="ykfsdk_numbers01">当前咨询人数较多,你排在第</string>
    <string name="ykfsdk_number02">位</string>
    <string name="ykfsdk_good_7moor">好客服 用七陌</string>
    <string name="ykfsdk_im_sdk_kf">即时联系在线客服</string>
    <string name="ykfsdk_video_voice_text">视频、语音、文字、表情、图片、文件</string>
    <string name="ykfsdk_all_not_string">通通不是事儿！</string>
    <string name="ykfsdk_contact_im">联系客服</string>
    <string name="ykfsdk_name">姓名</string>
    <string name="ykfsdk_writedrown_msg">对方撤回了一条消息</string>
    <string name="ykfsdk_titlename">标题</string>
    <string name="ykfsdk_content">内容</string>
    <string name="ykfsdk_nohelp">没帮助</string>
    <string name="ykfsdk_yeshelp">有帮助</string>
    <string name="ykfsdk_close">关闭</string>
    <string name="ykfsdk_leavemsg">留言板</string>
    <string name="ykfsdk_pleaseleavemsg">请留言~</string>
    <string name="ykfsdk_submit_leavemsg">提交留言</string>
    <string name="ykfsdk_cancelsend">手指上滑 取消发送</string>
    <string name="ykfsdk_good">好评</string>
    <string name="ykfsdk_file_name">字段名</string>
    <string name="ykfsdk_very_satisfaction">非常满意</string>
    <string name="ykfsdk_satisfaction">满意</string>
    <string name="ykfsdk_not_satisfaction">不满意</string>
    <string name="ykfsdk_cancel">取消</string>
    <string name="ykfsdk_setting">设置</string>
    <string name="ykfsdk_complete">完成</string>
    <string name="ykfsdk_now_robit">当前是机器人为你服务</string>
    <string name="ykfsdk_other_writing">对方正在输入...</string>
    <string name="ykfsdk_people_not_online">当前客服不在线</string>
    <string name="ykfsdk_people_now">当前是客服为你服务</string>
    <string name="ykfsdk_people_isleave">客服结束会话</string>
    <string name="ykfsdk_chat_img">图库</string>
    <string name="ykfsdk_chat_takeimg">拍摄</string>
    <string name="ykfsdk_chat_evaluate">评价</string>
    <string name="ykfsdk_chat_question">常见问题</string>
    <string name="ykfsdk_nothing_evaluate">评价列表为空</string>
    <string name="ykfsdk_chat_file">文件</string>
    <string name="ykfsdk_warm_prompt">温馨提示</string>
    <string name="ykfsdk_doyouneed">客服结束了会话，你想要</string>
    <string name="ykfsdk_continuecall">继续咨询</string>
    <string name="ykfsdk_back">退出</string>
    <string name="ykfsdk_doyouneedother">你的专属座席不在线，是否需要其它座席服务</string>
    <string name="ykfsdk_need">需要</string>
    <string name="ykfsdk_noneed">不需要</string>
    <string name="ykfsdk_topeoplesucceed">转人工服务成功</string>
    <string name="ykfsdk_sendfiletoobig">上传文件不能大于</string>
    <string name="ykfsdk_seiveceforyou">为您服务</string>
    <string name="ykfsdk_receivepeopleaction">接收到人工干预</string>
    <string name="ykfsdk_iknow">我知道了</string>
    <string name="ykfsdk_thinks_01">很高兴为您解决了问题！</string>
    <string name="ykfsdk_thinks_02">非常抱歉没有解决您的问题！</string>
    <string name="ykfsdk_url_failure">链接不正确！</string>
    <string name="ykfsdk_evaluate_succeed">评价成功</string>
    <string name="ykfsdk_haddownload">已下载</string>
    <string name="ykfsdk_downloading">下载中...</string>
    <string name="ykfsdk_sended">已发送</string>
    <string name="ykfsdk_notpermession">权限不足！</string>
    <string name="ykfsdk_notnetwork">当前没有网络连接</string>
    <string name="ykfsdk_sorryconfigurationiswrong">对不起，由于在线咨询配置错误，暂时无法进行咨询...</string>
    <string name="ykfsdk_sdkinitwrong">客服初始化失败</string>
    <string name="ykfsdk_reading">加载中...</string>
    <string name="ykfsdk_peer_no_number">技能组无坐席</string>
    <string name="ykfsdk_satisfy_title">感谢您使用我们的服务，请为此次服务评价！</string>
    <string name="ykfsdk_satisfy_thank">感谢您对此次服务做出评价，祝您生活愉快，再见！</string>
    <string name="ykfsdk_wait_link">等待接入</string>
    <string name="ykfsdk_open_camera">请打开相机权限</string>
    <string name="ykfsdk_voice_to_text_error">语音转文本失败</string>
    <string name="ykfsdk_voice_to_text_btn">转文字</string>
    <string name="ykfsdk_voice_input">语音输入</string>
    <string name="ykfsdk_ykf_copy_num">复制号码</string>
    <string name="ykfsdk_ykf_copyok">已复制</string>
    <string name="ykfsdk_ykf_call">呼叫</string>
    <string name="ykfsdk_ykf_read">已读</string>
    <string name="ykfsdk_ykf_unread">未读</string>
    <string name="ykfsdk_ykf_maybe_telphone">可能是一个电话号码,你可以</string>
    <string name="ykfsdk_ykf_no_imagepick">手机中可能没有相册</string>
    <string name="ykfsdk_ykf_nologin_timeout">由于您长时间未接入，会话已被系统关闭~</string>
    <string name="ykfsdk_ykf_nonetwork_error">系统监测到网络异常，你可能收不到客服消息，请退出重试~</string>
    <string name="ykfsdk_ykf_recording_error">录音失败，请再次重试</string>
    <string name="ykfsdk_ykf_notify_otheragent">已通知其它座席为你服务</string>
    <string name="ykfsdk_ykf_notify_otheragent_fail">通知其它座席失败</string>
    <string name="ykfsdk_ykf_not_robot_send">非机器人对话，不可发送该消息</string>
    <string name="ykfsdk_ykf_not_netwokr_error">检测到您网络异常啦</string>
    <string name="ykfsdk_ykf_httpfun_error">获取接口错误</string>
    <string name="ykfsdk_ykf_evaluation_timeout">评价已超时</string>
    <string name="ykfsdk_ykf_evaluation_robot">评价机器人服务</string>
    <string name="ykfsdk_ykf_solved_ok">已解决</string>
    <string name="ykfsdk_ykf_solved_fail">未解决</string>
    <string name="ykfsdk_ykf_robot_evaluation_ok">机器人评价成功</string>
    <string name="ykfsdk_ykf_robot_evaluation_fail">机器人评价失败</string>
    <string name="ykfsdk_ykf_chatbegin_fail">开启会话失败</string>
    <string name="ykfsdk_ykf_not_support_file">暂不支持此类文件</string>
    <string name="ykfsdk_ykf_select_scu">选择日程</string>
    <string name="ykfsdk_ykf_select_peer">选择技能组</string>
    <string name="ykfsdk_ykf_chatfinish_reopen">当前会话已经关闭,是否重新开启会话</string>
    <string name="ykfsdk_ykf_chatbegin">开始会话</string>
    <string name="ykfsdk_ykf_chatbegin_reconnect">重新接入</string>
    <string name="ykfsdk_ykf_loadmore_fail">加载更多失败</string>
    <string name="ykfsdk_ykf_autotext_fail_reclick">:转换文字失败,请点击重新转换</string>
    <string name="ykfsdk_ykf_autotext_fail_nocheck">:未识别语音消息</string>
    <string name="ykfsdk_ykf_autotext_fail_solong">:语音过长，暂时无法转换</string>
    <string name="ykfsdk_ykf_submit_review">提交评价</string>
    <string name="ykfsdk_ykf_submit_thanks">感谢您使用我们的服务，请为此次服务评价！</string>
    <string name="ykfsdk_ykf_submit_thankbay">感谢您对此次服务做出评价，祝您生活愉快，再见！</string>
    <string name="ykfsdk_ykf_submit_reviewreason">请填写满意度评价原因</string>
    <string name="ykfsdk_ykf_submit_reviewtag">请选择满意度评价标签</string>
    <string name="ykfsdk_ykf_submit_reviewchoose">请选择评价选项</string>
    <string name="ykfsdk_ykf_submit_reviewfail">评价提交失败</string>
    <string name="ykfsdk_ykf_wait">请稍等...</string>
    <string name="ykfsdk_ykf_no_data">没有数据</string>
    <string name="ykfsdk_ykf_no_datamore">没有更多数据了</string>
    <string name="ykfsdk_ykf_save_pic">保存图片</string>
    <string name="ykfsdk_ykf_save_pic_ok">保存图片成功</string>
    <string name="ykfsdk_ykf_save_pic_fail">保存图片失败，请稍后重试</string>
    <string name="ykfsdk_ykf_please_leavemessage">请留言~</string>
    <string name="ykfsdk_ykf_please_leavemessage_replay">请留言，我们将尽快联系您</string>
    <string name="ykfsdk_ykf_please_required">是必填项</string>
    <string name="ykfsdk_ykf_up_leavemessageok">提交留言成功</string>
    <string name="ykfsdk_ykf_up_leavemessage_fail">提交留言失败</string>
    <string name="ykfsdk_ykf_put_edit">请输入内容</string>
    <string name="ykfsdk_ykf_find_your_order">请选择您想要查询的订单</string>
    <string name="ykfsdk_ykf_noexpress">暂无物流信息</string>
    <string name="ykfsdk_ykf_lookmore">查看更多</string>
    <string name="ykfsdk_ykf_look_express">查看完整物流信息</string>
    <string name="ykfsdk_ykf_reselect">重新选择</string>
    <string name="ykfsdk_ykf_waybill_number">运单号:</string>
    <string name="ykfsdk_ykf_sendto_agent">发给坐席</string>
    <string name="ykfsdk_ykf_have_been_received">已签收</string>
    <string name="ykfsdk_ykf_copy">复制</string>
    <string name="ykfsdk_ykf_copy_success">已经复制到粘贴板</string>
    <string name="ykfsdk_ykf_call_time">通话时长:</string>
    <string name="ykfsdk_ykf_video_cancle">视频会话已取消</string>
    <string name="ykfsdk_ykf_video_refuse">对方拒绝了视频邀请</string>
    <string name="ykfsdk_ykf_video_send">对方发送的视频</string>
    <string name="ykfsdk_ykf_video_publish">发出的视频</string>
    <string name="ykfsdk_ykf_nopeer">无技能组</string>
    <string name="ykfsdk_ykf_now_back">返回</string>
    <string name="ykfsdk_satisfy_title_name">服务评价</string>
    <string name="ykfsdk_ykf_leave_msg">留言</string>
    <string name="ykfsdk_ykf_leave_content">内容</string>
    <string name="ykfsdk_ykf_please_choosemulit">请先选择</string>
    <string name="ykfsdk_ykf_confirm">确认</string>
    <string name="ykfsdk_ykf_please_edit_complete">请您填写完整</string>
    <string name="ykfsdk_pickerview_year">年</string>
    <string name="ykfsdk_pickerview_month">月</string>
    <string name="ykfsdk_pickerview_day">日</string>
    <string name="ykfsdk_pickerview_hours">时</string>
    <string name="ykfsdk_pickerview_minutes">分</string>
    <string name="ykfsdk_pickerview_seconds">秒</string>
    <string name="ykfsdk_ykf_xbot_form_up_file">选择文件(20MB以内)</string>
    <string name="ykfsdk_ykf_please_choose">请选择</string>
    <string name="ykfsdk_ykf_submit">提交</string>
    <string name="ykfsdk_ykf_required_form">为必填项,请填写</string>
    <string name="ykfsdk_ykf_upfilefail_form">附件上传失败，请重试</string>
    <string name="ykfsdk_ykf_please_input">请填写</string>
    <string name="ykfsdk_ykf_submission_successful">提交成功!</string>
    <string name="ykfsdk_ykf_unreadmsg">未读消息数为</string>
    <string name="ykfsdk_ykf_msg_today">今天</string>
    <string name="ykfsdk_ykf_msg_yesterday">昨天</string>
    <string name="ykfsdk_ykf_evaluation_content">欢迎为我们的服务提意见</string>
    <string name="ykfsdk_ykf_noproblem_tosee">暂无常见问题可供查看</string>
    <string name="ykfsdk_ykf_seatcamera_not_open">坐席未开启摄像头</string>
    <string name="ykfsdk_ykf_recordingtime_istooshort">录音时间太短</string>
    <string name="ykfsdk_ykf_leaveapp">确认离开应用吗</string>
    <string name="ykfsdk_ykf_service_invites_videochat">客服邀请你进行视频聊天</string>
    <string name="ykfsdk_ykf_answer_videochat">接听</string>
    <string name="ykfsdk_ykf_refuse_videochat">拒绝</string>
    <string name="ykfsdk_ykf_determine">确定</string>
    <string name="ykfsdk_ykf_voice_to_text">语音转文本</string>
    <string name="ykfsdk_ykf_convert_complete">转换完成</string>
    <string name="ykfsdk_ykf_loading">正在加载...</string>
    <string name="ykfsdk_ykf_intheend">我是有底线的</string>
    <string name="ykfsdk_ykf_talking_too_long">说话时间超长</string>
    <string name="ykfsdk_ykf_investigate_service_hint">请您对本次服务做出评价</string>
    <string name="ykfsdk_ykf_immediately_investigate">立即评价</string>
    <string name="ykfsdk_ykf_thanks_investigate_title">感谢您对本次服务做出评价</string>
    <string name="ykfsdk_ykf_user_commented">用户已评价</string>
    <string name="ykfsdk_ykf_investigate_lable">标签</string>
    <string name="ykfsdk_ykf_detailed_information">详细信息</string>
    <string name="ykfsdk_ykf_has_been_evaluated">该会话已进行满意度评价</string>
    <string name="ykfsdk_ykf_dont_evaluated">无法评价</string>
    <string name="ykfsdk_ykf_logistics_information">物流信息</string>
    <string name="ykfsdk_ykf_no_logistics_information">暂无物流信息</string>
    <string name="ykfsdk_ykf_has_been_upload_tips">上传中...</string>
    <string name="ykfsdk_ykf_bottomdialog_title">提示</string>
    <string name="ykfsdk_ykf_chatactivity_isfinish">聊天页面已关闭,请重新开启咨询</string>
    <string name="ykfsdk_ykf_dialog_exist_video">正在通话中，离开此页面会挂断通话，您确定要离开吗？</string>
    <string name="ykfsdk_chat_video_call">视频通话</string>
    <string name="ykfsdk_ykf_starting_video_tips">请先转人工后，再发起视频</string>
    <string name="ykfsdk_indicator">%1$s/%2$s</string>
    <string name="ykfsdk_toast_save_success">成功保存到: </string>
    <string name="ykfsdk_queue_quit_content_keep">离开后，请及时返回查看排队进展。以免错过人工服务</string>
</resources>