<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/ykfsdk_all_white">

            <TextView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/ykfsdk_close"
                android:textColor="?attr/ykfsdk_ykf_theme_color_default"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ykfsdk_leavemsg"
                android:textColor="@color/ykfsdk_all_black"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/inviteLeavemsgTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ykfsdk_ykf_bg_offline_tittle"
            android:padding="10dp"
            android:textColor="?attr/ykfsdk_ykf_theme_color_default"
            android:textSize="16sp"
            tools:text="哈哈哈" />

        <LinearLayout
            android:id="@+id/offline_ll_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id_et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ykfsdk_kf_offlinedialog_et_bg"
                android:gravity="top"
                android:hint="@string/ykfsdk_pleaseleavemsg"
                android:maxLines="6"
                android:minLines="6"
                android:padding="10dp"
                android:textColorHint="@color/ykfsdk_color_999999"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/offline_ll_custom_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <android.widget.Button
                android:id="@+id/id_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/ykfsdk_ykf_main_btn_bg"
                android:text="@string/ykfsdk_submit_leavemsg"
                android:textColor="@color/ykfsdk_all_white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
