<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >

    <include
        android:id="@+id/include_time"
        layout="@layout/ykfsdk_ykf_chatitem_time"/>
    <RelativeLayout
        android:id="@+id/chart_from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/include_time"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="48dp">

        <ImageView
            android:id="@+id/chatting_avatar_iv"
            android:layout_width="@dimen/ykfsdk_head_avatar_size"
            android:layout_height="@dimen/ykfsdk_head_avatar_size"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ykfsdk_kf_head_default_robot" />

        <TextView
            android:id="@+id/chatfrom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:text="@string/ykfsdk_name"
            android:textColor="@color/ykfsdk_all_black"
            android:textSize="10sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/kf_chat_rich_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatfrom_tv_name"
            android:background="@drawable/ykfsdk_ykf_receive_msg_bg"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:layout_marginLeft="4dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/kf_chat_rich_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ykfsdk_all_black"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/ykfsdk_titlename"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                />
            <LinearLayout
                android:id="@+id/kf_chat_rich_tv_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/kf_chat_rich_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ykfsdk_grey"
                    android:textSize="14sp"
                    android:text="@string/ykfsdk_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    />
                <ImageView
                    android:id="@+id/kf_chat_rich_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <include layout="@layout/ykfsdk_layout_chat_withdraw" />

</RelativeLayout>