<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/chatting_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
         android:gravity="center"
        android:textColor="@color/ykfsdk_color_666666"
        android:textSize="12sp"/>

    <RelativeLayout
        android:id="@+id/chart_from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/chatting_time_tv"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="48dp">

        <ImageView
            android:id="@+id/chatting_avatar_iv"
            android:layout_width="@dimen/ykfsdk_head_avatar_size"
            android:layout_height="@dimen/ykfsdk_head_avatar_size"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ykfsdk_kf_head_default_local" />

        <TextView
            android:id="@+id/chatfrom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@id/chatting_avatar_iv"
            android:text="@string/ykfsdk_name"
            android:textColor="@color/ykfsdk_all_black"
            android:textSize="10sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/kf_chat_rich_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatfrom_tv_name"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/chatting_avatar_iv"
            android:background="@drawable/ykfsdk_ykf_receive_msg_bg"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:id="@+id/kf_chat_rich_tv_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <ImageView
                    android:id="@+id/kf_chat_rich_iv"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/kf_chat_rich_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/ykfsdk_titlename"
                        android:textColor="@color/ykfsdk_all_black"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:id="@+id/kf_chat_rich_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/ykfsdk_content"
                        android:textColor="@color/ykfsdk_grey"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/kf_chat_rich_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/ykfsdk_content"
                        android:textColor="@color/ykfsdk_tv_red"
                        android:textSize="14sp"
                        />

                </LinearLayout>




            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <include
        android:layout_marginLeft="24dp"
        layout="@layout/ykfsdk_ykf_read_unreadtext"
        android:layout_marginBottom="4dp"
        android:layout_alignBottom="@+id/chart_from_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/chatting_state_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28dp"
        android:background="@drawable/ykfsdk_kf_chat_failure_msgs"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/uploading_pb"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminateDrawable="@drawable/ykfsdk_progressbar_color"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28dp"/>

    <TextView
        android:id="@+id/chatting_withdraw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/ykfsdk_lightgrey"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/ykfsdk_writedrown_msg"
        android:textSize="12sp"
        android:visibility="gone"/>

</RelativeLayout>